tools/argo-prj-provision/operator/argocd-server-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
  name: argocd
  namespace: argocd
spec:
  host: argocd-argocd.apps.kfwk3l1c.eastus.aroapp.io
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: argocd-server
    weight: 100
  wildcardPolicy: None
